--- a/app/views/products/_filtering_test_link.html.erb
+++ b/app/views/products/_filtering_test_link.html.erb
@@ -10,49 +10,51 @@
 %>
 
 <% parent_reloading = false unless (defined? parent_reloading) %>
-<% tasks = with_c3_task(task) %>
-<% status = tasks_status(tasks) %>
-<% should_reload = should_reload_product_test_link?(status, test) %>
+<% cache [test, task, parent_reloading] do %>
+  <% tasks = with_c3_task(task) %>
+  <% status = tasks_status(tasks) %>
+  <% should_reload = should_reload_product_test_link?(status, test) %>
 
-<% if test.state != :ready %>
-  <% if test.state == :queued %>
-    <i class="fa fa-fw fa-circle text-muted" aria-hidden="true"></i>
-    <span class="label label-default">queued</span>
-  <% elsif test.state == :building %>
-    <i class="fa fa-fw fa-cog fa-spin" aria-hidden="true"></i>
-    <span class="label label-default">building</span>
-  <% elsif test.state == :errored %>
-  <i aria-hidden='true' class = 'fa fa-fw fa-exclamation text-warning'</i>
-  <strong class="text-info">Internal Error</strong>
-  <% end %>
-<% else %>
-  <% case status %>
-  <% when 'passing' %>
-    <i class = 'fa fa-fw fa-check-circle text-success' aria-hidden="true"></i>
-    <%= link_to 'view', new_task_test_execution_path(task), :class => "label label-success" %>
-    <%= render partial: '/products/product_test_upload', locals: { task: task } %>
-  <% when 'failing'%>
-    <i class = 'fa fa-fw fa-play-circle text-danger' aria-hidden="true"></i>
-    <%= link_to 'retry', new_task_test_execution_path(task), :class => "label label-danger" %>
-    <%= render partial: '/products/product_test_upload', locals: { task: task } %>
-  <% when 'errored'%>
-    <i class = 'fa fa-fw fa-exclamation-circle text-warning' aria-hidden="true"></i>
-    <%= link_to 'retry', new_task_test_execution_path(task), :class => "label label-warning" %>
-    <%= render partial: '/products/product_test_upload', locals: { task: task } %>
-  <% when 'pending'%>
-    <i class = 'fa fa-fw fa-gavel fa-spin text-testing' aria-hidden = 'true'></i>
-    <%= link_to 'testing...', new_task_test_execution_path(task), :class => 'label label-default' %>
+  <% if test.state != :ready %>
+    <% if test.state == :queued %>
+      <i class="fa fa-fw fa-circle text-muted" aria-hidden="true"></i>
+      <span class="label label-default">queued</span>
+    <% elsif test.state == :building %>
+      <i class="fa fa-fw fa-cog fa-spin" aria-hidden="true"></i>
+      <span class="label label-default">building</span>
+    <% elsif test.state == :errored %>
+    <i aria-hidden='true' class = 'fa fa-fw fa-exclamation text-warning'</i>
+    <strong class="text-info">Internal Error</strong>
+    <% end %>
   <% else %>
-    <i class = 'fa fa-fw fa-play-circle text-info' aria-hidden="true"></i>
-    <%= link_to 'start', new_task_test_execution_path(task), :class => "label label-info" %>
-    <%= render partial: '/products/product_test_upload', locals: { task: task } %>
+    <% case status %>
+    <% when 'passing' %>
+      <i class = 'fa fa-fw fa-check-circle text-success' aria-hidden="true"></i>
+      <%= link_to 'view', new_task_test_execution_path(task), :class => "label label-success" %>
+      <%= render partial: '/products/product_test_upload', locals: { task: task } %>
+    <% when 'failing'%>
+      <i class = 'fa fa-fw fa-play-circle text-danger' aria-hidden="true"></i>
+      <%= link_to 'retry', new_task_test_execution_path(task), :class => "label label-danger" %>
+      <%= render partial: '/products/product_test_upload', locals: { task: task } %>
+    <% when 'errored'%>
+      <i class = 'fa fa-fw fa-exclamation-circle text-warning' aria-hidden="true"></i>
+      <%= link_to 'retry', new_task_test_execution_path(task), :class => "label label-warning" %>
+      <%= render partial: '/products/product_test_upload', locals: { task: task } %>
+    <% when 'pending'%>
+      <i class = 'fa fa-fw fa-gavel fa-spin text-testing' aria-hidden = 'true'></i>
+      <%= link_to 'testing...', new_task_test_execution_path(task), :class => 'label label-default' %>
+    <% else %>
+      <i class = 'fa fa-fw fa-play-circle text-info' aria-hidden="true"></i>
+      <%= link_to 'start', new_task_test_execution_path(task), :class => "label label-info" %>
+      <%= render partial: '/products/product_test_upload', locals: { task: task } %>
+    <% end %>
   <% end %>
-<% end %>
 
-<% if should_reload && !parent_reloading %>
-  <script>
-  $(document).ready(function() {
-    $.ajax({url: "<%= request.env['PATH_INFO'] %>", type: "GET", dataType: 'script', data: { partial: 'filtering_test_link', task_id: "<%= task.id.to_s %>" }});
-  });
-  </script>
-<% end %>
+  <% if should_reload && !parent_reloading %>
+    <script>
+    $(document).ready(function() {
+      $.ajax({url: "<%= request.env['PATH_INFO'] %>", type: "GET", dataType: 'script', data: { partial: 'filtering_test_link', task_id: "<%= task.id.to_s %>" }});
+    });
+    </script>
+  <% end %>
+<% end #cache %>
