--- a/app/views/products/_filtering_test_status_display.html.erb
+++ b/app/views/products/_filtering_test_status_display.html.erb
@@ -3,42 +3,44 @@
 # local variable 'tests' should be filtering_tests
 
 %>
-<% tests = @product.product_tests.filtering_tests %>
+<% cache @product do %>
+  <% tests = @product.product_tests.filtering_tests %>
 
-<table class = 'table' id = 'filtering_test_status_display'>
-  <thead>
-    <th class="no-wrap" scope="col">Filtering Criteria</th>
-    <th class="no-wrap" scope="col">QRDA Category I</th>
-    <th class="no-wrap" scope="col">QRDA Category III</th>
-    <th class="no-wrap" scope="col">Last Updated</th>
-  </thead>
-  <tbody>
-    <% tests.each do |test| %>
-      <tr>
-        <td class="no-wrap">
-          <% if test.display_name.to_s == '' %>
-            <%= test.options.filters.keys.join('/').titleize %>
-          <% else %>
-            <%= test.display_name %>
-          <% end %>
-        </td>
-        <td class="no-wrap" id = "<%= id_for_html_wrapper_of_task(test.cat1_task) %>">
-          <%= render partial: 'filtering_test_link', locals: { test: test, task: test.cat1_task, parent_reloading: true } %>
-        </td>
-        <td class="no-wrap" id = "<%= id_for_html_wrapper_of_task(test.cat3_task) %>">
-          <%= render partial: 'filtering_test_link', locals: { test: test, task: test.cat3_task, parent_reloading: true } %>
-        </td>
-        <td class="no-wrap"><i class="fa fa-fw fa-clock-o" aria-hidden="true"></i>
-          <%= local_time_ago(test.updated_at) %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <table class = 'table' id = 'filtering_test_status_display'>
+    <thead>
+      <th class="no-wrap" scope="col">Filtering Criteria</th>
+      <th class="no-wrap" scope="col">QRDA Category I</th>
+      <th class="no-wrap" scope="col">QRDA Category III</th>
+      <th class="no-wrap" scope="col">Last Updated</th>
+    </thead>
+    <tbody>
+      <% tests.each do |test| %>
+        <tr>
+          <td class="no-wrap">
+            <% if test.display_name.to_s == '' %>
+              <%= test.options.filters.keys.join('/').titleize %>
+            <% else %>
+              <%= test.display_name %>
+            <% end %>
+          </td>
+          <td class="no-wrap" id = "<%= id_for_html_wrapper_of_task(test.cat1_task) %>">
+            <%= render partial: 'filtering_test_link', locals: { test: test, task: test.cat1_task, parent_reloading: true } %>
+          </td>
+          <td class="no-wrap" id = "<%= id_for_html_wrapper_of_task(test.cat3_task) %>">
+            <%= render partial: 'filtering_test_link', locals: { test: test, task: test.cat3_task, parent_reloading: true } %>
+          </td>
+          <td class="no-wrap"><i class="fa fa-fw fa-clock-o" aria-hidden="true"></i>
+            <%= local_time_ago(test.updated_at) %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<% if should_reload_product_test_status_display?(tests) %>
-  <script>
-    $(document).ready(function() {
-      $.ajax({url: "<%= request.env['PATH_INFO'] %>", type: "GET", dataType: 'script', data: { partial: 'filtering_test_status_display', html_id: "<%= html_id %>" }});
-    });
-  </script>
-<% end %>
+  <% if should_reload_product_test_status_display?(tests) %>
+    <script>
+      $(document).ready(function() {
+        $.ajax({url: "<%= request.env['PATH_INFO'] %>", type: "GET", dataType: 'script', data: { partial: 'filtering_test_status_display', html_id: "<%= html_id %>" }});
+      });
+    </script>
+  <% end %>
+<% end #cache %>
