--- a/app/views/products/_measure_tests_table_row.html.erb
+++ b/app/views/products/_measure_tests_table_row.html.erb
@@ -9,34 +9,36 @@
 
 <% parent_reloading = false unless (defined? parent_reloading) %>
 
-<% test = task.product_test %>
-<% include_c3 = test.product.c3_test %>
+<% cache [task, parent_reloading, task.product_test] do %>
+  <% test = task.product_test %>
+  <% include_c3 = test.product.c3_test %>
 
-<td data-sort="<%= cms_int(test.cms_id) %>"><%= test.cms_id %></td>
-<td><%= link_to test.name, new_task_test_execution_path(task) %></td>
-<% if include_first_task(test.product, task._type) %>
-  <td data-order="<%= set_sorting(test, task.status) %>">
-    <%= render partial: 'execution_status_message', locals: { execution: task.most_recent_execution, test_state: test.state } %>
+  <td data-sort="<%= cms_int(test.cms_id) %>"><%= test.cms_id %></td>
+  <td><%= link_to test.name, new_task_test_execution_path(task) %></td>
+  <% if include_first_task(test.product, task._type) %>
+    <td data-order="<%= set_sorting(test, task.status) %>">
+      <%= render partial: 'execution_status_message', locals: { execution: task.most_recent_execution, test_state: test.state } %>
+    </td>
+  <% end %>
+  <% if include_c3 %>
+    <% sibling_execution = task.most_recent_execution ? task.most_recent_execution.sibling_execution : nil %>
+    <td data-order="<%= set_sorting(test, task.status) %>">
+      <%= render partial: 'execution_status_message', locals: { execution: sibling_execution, test_state: test.state } %>
+    </td>
+  <% end %>
+  <td id = "<%= id_for_html_wrapper_of_task(task) %>" class="no-wrap" data-order="<%= set_sorting(test, task.status) %>">
+    <%= render partial: '/products/measure_test_link', locals: { test: test, task: task } %>
   </td>
-<% end %>
-<% if include_c3 %>
-  <% sibling_execution = task.most_recent_execution ? task.most_recent_execution.sibling_execution : nil %>
-  <td data-order="<%= set_sorting(test, task.status) %>">
-    <%= render partial: 'execution_status_message', locals: { execution: sibling_execution, test_state: test.state } %>
+  <td class="no-wrap" data-order="<%= task.updated_at %>">
+    <i class="fa fa-fw fa-clock-o" aria-hidden="true"></i><%= local_time_ago(task.updated_at) %>
   </td>
-<% end %>
-<td id = "<%= id_for_html_wrapper_of_task(task) %>" class="no-wrap" data-order="<%= set_sorting(test, task.status) %>">
-  <%= render partial: '/products/measure_test_link', locals: { test: test, task: task } %>
-</td>
-<td class="no-wrap" data-order="<%= task.updated_at %>">
-  <i class="fa fa-fw fa-clock-o" aria-hidden="true"></i><%= local_time_ago(task.updated_at) %>
-</td>
 
-<% # Only reload if the measure_tests_table isn't reloading for us. (This currently only happens in create.js.erb) %>
-<% if measure_test_running_for_row?(task) && !parent_reloading %>
-  <script>
-    $(document).ready(function() {
-      $.ajax({url: "<%= request.env['PATH_INFO'] %>", type: "GET", dataType: 'script', data: { partial: 'measure_tests_table_row', task_id: "<%= task.id.to_s %>" }});
-    });
-  </script>
-<% end %>
+  <% # Only reload if the measure_tests_table isn't reloading for us. (This currently only happens in create.js.erb) %>
+  <% if measure_test_running_for_row?(task) && !parent_reloading %>
+    <script>
+      $(document).ready(function() {
+        $.ajax({url: "<%= request.env['PATH_INFO'] %>", type: "GET", dataType: 'script', data: { partial: 'measure_tests_table_row', task_id: "<%= task.id.to_s %>" }});
+      });
+    </script>
+  <% end %>
+<% end # cache %>
